# Relic-Tool-Core

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: black.yml  ci.yml  mypy.yml  publish-pypi.yml  publish-test-pypi.yml  pylint.yml  pytest.yml  semver.yml
docs/: Makefile
docs/source/: conf.py  index.rst
docs/source/_templates/: module-custom.rst
src/relic/core/: __init__.py  cli.py  entrytools.py  errors.py  lazyio.py  serialization.py  typeshed.py
tests/: test_cli.py  test_errors.py  test_regressions.py  util.py
tests/unittest/: test_lazyio.py
tests/unittest/relic/core/: test_cli.py  test_errors.py  test_lazyio.py
